# s2-voronoi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  TODO.md  clippy_final.json  clippy_output.json  clippy_output_verified.json  refactor-plan.md  sorting_networks.json
.github/workflows/: ci.yml  heavy.yml
docs/: adaptive-canonical-clip-design-2026-06.md  algorithmic-performance-ideas.md  architecture.md  audit-triage.md  canonical-certification-design-2026-06.md  constraint-batch-pipeline-idea.md  correctness-contract.md  correctness.md  dense-cell-subindex-design.md  edgecheck-matching-optimization.md  engineering-findings.md  escalation-build-state-2026-06.md  fallback_builder.md  feature-api-wishlist.md  how-it-works.md  investigation-harvest.md  late-clip-reduction-ideas.md  live_dedup.md  local-repair-oracle-2026-06.md  memory-layout-ideas.md  micro-optimization-ideas.md  micro-optimization-matrix.md  multi-regime-perf.md  optimization-ideas.md  output-resolution-policy.md  p5-consistency-design.md  packed_knn_refactor_plan.md  perf-profiling-plan.md  perf-testing-timeline.md  performance.md  plan.md  point-api-plan.md  policy.md  post-clipping-pipeline-optimization.md  proactive-correctness-audit-2026-06.md  publish-readiness-findings.md  punch1-center-cell-integration.md  reclip-fallback-review-2026-06.md  reclip-hull-snap-experiment-2026-06.md  reclip-local-hull-design.md  (+9 more)
docs/rfcs/: 0001-directed-intra-bin-knn-and-packed-dominance.md  0002-packed-knn-chunked-termination.md  0003-packed-knn-hot-path-options-and-scaling.md
s2-voronoi-macros/: Cargo.toml
s2-voronoi-macros/src/: lib.rs
scripts/: bench.sh  bench_ab.ps1  bench_build.sh  bench_perf.sh  bench_run.sh  cgal_hull3.cpp  fidelity_campaign.sh  gen_clip_tables.py  gen_sort_nets.py  gen_sort_nets_microbench.py  gen_sort_nets_microbench_reg.py  perf.sh  plane_campaign.sh  robustness_campaign.sh  sphere_verify_soak.sh  sweep_grid_density.sh
src/: adjacency.rs  cell_mesh.rs  convex_hull.rs  delaunay.rs  diagram.rs  embedding.rs  error.rs  fp.rs  lib.rs  locate.rs  measures.rs  packed_layout.rs  plane_diagram.rs  plane_measures.rs  point_audit.rs  policy.rs  quality.rs  sort.rs  sort_nets.rs  spherical_arc.rs  tolerances.rs  types.rs  validation.rs
src/bin_support/: sort_nets_microbench.rs  sort_nets_microbench_reg.rs  sort_nets_tail4.rs
src/cube_grid/: build.rs  dense.rs  mod.rs  packed_knn.rs  projection.rs  query.rs  rustc-ice-2026-01-16T07_49_24-153927.txt  rustc-ice-2026-01-16T07_50_47-154225.txt  weld.rs
src/cube_grid/packed_knn/: mod.rs  scratch.rs  timing.rs
src/cube_grid/packed_knn/scratch/: cold.rs  emit.rs  helpers.rs  prepare.rs  tests.rs
src/cube_grid/query/: directed.rs  directed_tests.rs  mod.rs  scratch.rs  shells.rs  stream.rs  undirected.rs
src/cube_grid/tests/: bounds.rs  mod.rs  nn_contract.rs  topology.rs
src/knn_clipping/: boundary.rs  canonical.rs  cell_builder.rs  compute.rs  constants.rs  debug.rs  driver.rs  edge_reconcile.rs  edge_repair.rs  escalate.rs  fill.rs  knn.rs  live_dedup.rs  local_hull.rs  mod.rs  output_resolution.rs  p5_shadow.rs  plane_bridge.rs  preprocess.rs  proactive_audit.rs  reclip_repair.rs  rustc-ice-2026-01-16T08_02_18-160035.txt  timing.rs  topo2d.rs  union_find.rs
src/knn_clipping/cell_build/: mod.rs  run.rs
src/knn_clipping/cell_build/run/: failure.rs  frontier.rs  tests.rs
src/knn_clipping/clip_tables/: ngon_n3.rs  ngon_n4.rs  ngon_n5.rs  ngon_n6.rs  ngon_n7.rs  ngon_n8.rs  table_n3.rs  table_n4.rs  table_n5.rs  table_n6.rs  table_n7.rs  table_n8.rs
src/knn_clipping/edge_reconcile/: telemetry.rs
src/knn_clipping/live_dedup/: assemble.rs  binning.rs  build.rs  edge_checks.rs  mod.rs  packed.rs  shard.rs  types.rs
src/knn_clipping/timing/: mod.rs  real.rs  stub.rs
src/knn_clipping/topo2d/: batch_clip.rs  batch_clip8.rs  builder.rs  clip_stats.rs  clip_variants.rs  clip_variants_nuclear.rs  clippers.rs  microbench.rs  mod.rs  types.rs
src/knn_clipping/topo2d/builder/: clip.rs  extract.rs  projection.rs  tests.rs
src/knn_clipping/topo2d/clippers/: bitmask.rs  output.rs  small.rs
src/live_dedup/: assemble.rs  binning.rs  cell_output.rs  edge_checks.rs  emit.rs  mod.rs  packed.rs  shard.rs  types.rs
src/plane_clipping/: builder.rs  compute.rs  driver.rs  mod.rs  periodic_builder.rs  periodic_driver.rs  tests.rs
src/plane_grid/: mod.rs  periodic.rs  query.rs  tests.rs
src/plane_grid/packed/: mod.rs  scratch.rs  timing.rs
src/timing/: mod.rs  real.rs  stub.rs
tests/: adversarial.rs  api.rs  backend_fingerprint.rs  coincidence_probes.rs  correctness.rs  delaunay.rs  edge_repair_net.rs  embedding.rs  escalate.rs  escalate_local.rs  fidelity_campaign.rs  geometric_regressions.rs  high_degree.rs  locate.rs  output_resolution.rs  p5_shadow.rs  plane.rs  plane_coincidence_probes.rs  reclip_repair.rs  robustness_campaign.rs  small_n_geometry.rs  tmp_ulp_regimes.rs  validation.rs  validation_debug.rs  weird_geometry.rs  weld_cell_survival.rs
tests/support/: points.rs
