[package]
name = "s2-voronoi"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Spherical Voronoi diagrams on the unit sphere (S2)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PeterKlimk/s2-voronoi"
exclude = [".github/", "scripts/"]
keywords = ["voronoi", "sphere", "geometry", "s2"]
categories = ["algorithms", "mathematics", "science"]

[package.metadata.docs.rs]
# Public feature surface; internal flags (timing, profiling, microbench,
# simd_scalar, fma, tools) are not part of the documented contract.
features = ["parallel", "glam", "serde"]

[features]
default = ["parallel"]
parallel = ["rayon"]
glam = []  # Enable UnitVec3Like impl for glam::Vec3
timing = []  # Enable detailed timing instrumentation
profiling = [] # Profiling helpers (e.g. disable inlining on hot functions)
microbench = ["dep:rand", "dep:rand_chacha"] # Enable internal microbench harnesses
serde = ["dep:serde"] # Serialize/Deserialize for diagram types
qhull = ["qhull-enhanced"]  # Convex hull backend (test/bench only)
simd_scalar = [] # Scalar/autovectorized 8-lane path instead of `wide`; debugging/comparison
fma = [] # Prefer fused multiply-add via mul_add (may change results; can be slow without HW FMA)
tools = ["dep:clap", "dep:kiddo", "dep:rand", "dep:rand_chacha"] # Benchmark/utility binaries
bench_voronoice = ["tools", "dep:voronoice"] # Head-to-head planar comparison in bench_plane

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
kiddo = { version = "4", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
# Math (always internal dependency)
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }

# Fast hashing for integer keys
rustc-hash = "2"

# Optional: parallelism
rayon = { version = "1.10", optional = true }

# Stable-Rust explicit SIMD (default 8-lane backend; see src/fp.rs)
wide = "0.7"

# Optional: serialization for diagram types
serde = { version = "1", features = ["derive"], optional = true }

# Optional: convex hull backend (test-only)
qhull-enhanced = { version = "0.1", optional = true }

# Optional: competing planar Voronoi crate, benchmarked head-to-head by
# bench_plane (feature: bench_voronoice)
voronoice = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1"

[[bin]]
name = "bench_voronoi"
path = "src/bin/bench_voronoi.rs"
required-features = ["tools"]

[[bin]]
name = "bench_plane"
path = "src/bin/bench_plane.rs"
required-features = ["tools"]

[[bin]]
name = "bench_bins"
path = "src/bin/bench_bins.rs"
required-features = ["tools", "parallel"]

[[bin]]
name = "microbench_clip"
path = "src/bin/microbench_clip.rs"
required-features = ["microbench"]

[[bin]]
name = "microbench_batch"
path = "src/bin/microbench_batch.rs"
required-features = ["microbench"]

[[bin]]
name = "microbench_packed_select"
path = "src/bin/microbench_packed_select.rs"
required-features = ["microbench"]

[profile.checked]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true

[profile.checked.package."*"]
debug = false
debug-assertions = false

[profile.profiled]
inherits = "release"
opt-level = 3
debug = 1
lto = false
codegen-units = 1
strip = "none"
