[package]
name = "s2-voronoi"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Spherical Voronoi diagrams on the unit sphere (S2)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PeterKlimk/s2-voronoi"
exclude = [".github/", "scripts/"]
keywords = ["voronoi", "sphere", "geometry", "s2"]
categories = ["algorithms", "mathematics", "science"]

[package.metadata.docs.rs]
# Public feature surface; internal flags (timing, profiling, microbench,
# simd_scalar, fma, tools) are not part of the documented contract.
features = ["parallel", "glam", "serde"]

[features]
default = ["parallel"]
parallel = ["rayon"]
glam = []  # Enable UnitVec3Like impl for glam::Vec3
timing = []  # Enable detailed timing instrumentation
profiling = [] # Profiling helpers (e.g. disable inlining on hot functions)
microbench = ["dep:rand", "dep:rand_chacha"] # Enable internal microbench harnesses
serde = ["dep:serde"] # Serialize/Deserialize for diagram types
qhull = ["qhull-enhanced"]  # Convex hull backend (test/bench only)
p5_shadow = [] # P5 shadow audit: log canonical-vs-local clip decisions (no behavior change)
escalate_probe = ["dep:delaunator"] # Expose the defect-driven exact local-rebuild for integration testing
simd_scalar = [] # Scalar/autovectorized 8-lane path instead of `wide`; debugging/comparison
fma = [] # Prefer fused multiply-add via mul_add. On x86/x86_64 requires the `+fma` target feature (RUSTFLAGS="-C target-feature=+fma" or -C target-cpu=native); else compile error (SIMD/scalar dot paths must fuse identically). See src/fp.rs guard.
tools = ["dep:clap", "dep:kiddo", "dep:rand", "dep:rand_chacha"] # Benchmark/utility binaries

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
kiddo = { version = "4", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
# Math (always internal dependency)
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }

# Fast hashing for integer keys
rustc-hash = "2"

# Optional: parallelism
rayon = { version = "1.10", optional = true }

# Stable-Rust explicit SIMD (default 8-lane backend; see src/fp.rs)
wide = "0.7"

# Optional: serialization for diagram types
serde = { version = "1", features = ["derive"], optional = true }

# Exact geometric predicates (Shewchuk adaptive) for the P5 canonical
# escalation evaluator (production: near-tie clip decisions)
robust = "1"
delaunator = { version = "1.1.0", optional = true }

# Optional: convex hull backend (test-only)
qhull-enhanced = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde_json = "1"

[[bin]]
name = "bench_voronoi"
path = "src/bin/bench_voronoi.rs"
required-features = ["tools"]

[[bin]]
name = "bench_bins"
path = "src/bin/bench_bins.rs"
required-features = ["tools", "parallel"]

[[bin]]
name = "microbench_clip"
path = "src/bin/microbench_clip.rs"
required-features = ["microbench"]

[[bin]]
name = "microbench_batch"
path = "src/bin/microbench_batch.rs"
required-features = ["microbench"]

[[bin]]
name = "microbench_packed_select"
path = "src/bin/microbench_packed_select.rs"
required-features = ["microbench"]

[[bin]]
name = "microbench_sort"
path = "src/bin/microbench_sort.rs"
required-features = ["microbench"]

# NOTE: thin-LTO + codegen-units=1 was tried (commit f4c6426) and reverted.
# It showed a ~few% uniform win, but the magnitude is layout-noise-confounded,
# it was never verified on other regimes, and it costs ~6x release build time.
# Parked as a perf idea to revisit with a proper
# multi-regime + diff-disjoint-control measurement.

[profile.checked]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true

[profile.checked.package."*"]
debug = false
debug-assertions = false

[profile.profiled]
inherits = "release"
opt-level = 3
debug = 1
lto = false
codegen-units = 1
strip = "none"
